--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 
     <style>
         canvas{
             border: 1px solid black;
-            background-color:rgb(5, 5, 5);
-        }
-
-        body{
-            margin:0;
+            background: black;
         }
     </style>
+
 </head>
 <body>
-    <canvas></canvas>
-    <script src="practice.js"></script>
+
+    <!-- <button>Click</button>
+    <button>Click Me</button>-->
+
+    <canvas ></canvas>
+    <script src="pract.js"></script> 
+
 </body>
 </html>
